<resources>
    <string name="app_name">BGMI Tournament</string>
    <string name="name">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="register">Register</string>
    <string name="AlreadyHave">Already Have An Account?</string>
    <string name="login">Login</string>
    <string name="createNewAccount">Create New Account?</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="bookMatches">Book Matches</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="morningmatches">Morning Matches</string>
    <string name="eveningMatches">Evening Matches</string>
    <string name="afternoonMatches">Afternoon Matches</string>
    <string name="myOrders">My Orders</string>

    <string name="uploadDate">Upload Date</string>
    <string name="uploadTime">Upload Time</string>
    <string name="referenceID">Reference ID</string>
    <string name="slots">Slots</string>
    <string name="matchCategory">Match Category</string>
    <string name="matchDate">Match Date</string>
    <string name="matchTime">Match Time</string>
    <string name="roomId">Room ID</string>
    <string name="roomPass">Room Pass</string>
    <string name="mapName">Erangle Match</string>
    <string name="entryPrice">ENTRY PRICE: 10</string>
    <string name="delete">Delete</string>
    <string name="purchase">Purchase</string>
</resources>